--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -91,21 +91,16 @@
             <div class="row">
               <div class="col">
                 <div class="mb-3 row">
-                  {% comment %} <label class="col-sm-3 col-form-label">Create New User ....!!!</label> {% endcomment %}
-  
-                  <div class="row">
-                    <div class="col">
-                      <div class="mb-3 row">
-                        
+                 
                         <p>
                             <label for="id_username">Emp Id:</label>
-                            <input type="text" name="emp_id" maxlength="150" autofocus="" required="" aria-describedby="id_username_helptext" id="emp_id" value="{{ emp_id }}" readonly>
+                            <input type="text" class="form-control" aria-readonly="true" name="emp_id" maxlength="150" autofocus="" required="" aria-describedby="id_username_helptext" id="emp_id" value="{{ emp_id }}" readonly>
                             
                             
                           </p>
                 <p>
             <label for="id_username">Name:</label>
-            <input type="text" name="name" maxlength="150" autofocus="" required="" aria-describedby="id_username_helptext" id="name">
+            <input type="text" class="form-control" name="name" maxlength="150" autofocus="" required="" aria-describedby="id_username_helptext" id="name">
             
             
             
@@ -114,7 +109,7 @@
         
         <p>
           <label for="id_email">Email:</label>
-          <input type="email" name="email" maxlength="320" required="" id="id_email">
+          <input type="email" name="email" class="form-control" maxlength="320" required="" id="id_email">
           <span id="email-error" class="text-danger"></span>
           
         </p>
@@ -122,40 +117,31 @@
         <p>
             <label for="contact_no">Contact no:</label>
           
-            <input id=contact_no autocomplete="off" type="tel"  name="contact_no"  autocomplete="off" pattern="[0-9]{10}" maxlength="10" minlength="10" value="" required>
+            <input id=contact_no class="form-control" autocomplete="off" type="tel"  name="contact_no"  autocomplete="off" pattern="[0-9]{10}" maxlength="10" minlength="10" value="" required>
             <span id="contact-no-error" class="text-danger"></span>
           </p>
       
      
         <p>
             <label for="id_group">Group:</label>
-            <select name="group" id="id_group">
-                <option value="" selected="">Select Group</option>
+            <select name="group"  id="id_group">
+                <option value=""  selected="">Select Group</option>
                 {% for group in groups %}
                     <option value="{{ group.id }}">{{ group.name }}</option>
                 {% endfor %}
             </select>
         </p>
-        
-        {% comment %} <p>
-            <label for="id_status">Status:</label>
-            <select name="status" id="id_status">
-                <option value="Activate" selected>Activate</option>
-                <option value="Deactivate">Deactivate</option>
-            </select>
-        </p> {% endcomment %}
-        
+      
+       
           </div>
       </div>
       </div>
+      <button class="btn btn-primary btn-block " type="submit">Create</button>
     </div>
-</div>
-</div>
 
-</div>
-        <button class="btn btn-primary btn-block" type="submit">Create</button>
-    </form>
-</div>
+       
+        </form>
+    </div>
 
    
 </div>
