--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -41,11 +41,9 @@
         {% endfor %}
     </div>
     {% endif %}
-    <div>
-      <button class="btn btn-primary-light btn-left" type="button"><a href="{% url 'grid:register' %}"><i data-feather="log-out"></i>Create New User</a></button>
-      </div>
+ 
       <div>
-        <button class="btn btn-primary-light btn-left" type="button"><a href="{% url 'grid:add_employee' %}"><i data-feather="log-out"></i>Create Employee</a></button>
+        <button class="btn btn-primary-light m-4 btn-left" type="button"><a href="{% url 'grid:add_employee' %}"><i data-feather="log-out"></i>Create Employee</a></button>
         </div>
     <div class="card-header" style="background: #0c7097; color:white;">Upload Grid</div>
     
